removed borders and coloring @ all sections

--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
       cellpadding="0"
       cellspacing="0"
       border="0"
-      style="width: 100%; background-color: #ededed; border: 3px solid red"
+      style="width: 100%; background-color: #ededed"
     >
-      outer-container
       <tr>
         <td>
           <!-- inner container  -->
@@ -84,7 +83,6 @@
               margin: 0 auto;
             "
           >
-            inner-container
             <!-- header row -->
             <tr>
               <!-- logo -->
@@ -323,7 +321,7 @@
                 >
                   <tr>
                     <!-- go paperless -->
-                    <td style="border: 2px solid red">
+                    <td>
                       <!-- outer table/ container for three columns section -->
                       <table
                         width="100%"
@@ -471,14 +469,13 @@
             <tr>
               <td>
                 <!-- container table -->
-                footer main container table {purple border}
+                <!-- footer main container table -->
                 <table
                   role="presentaition"
                   width="100%"
                   border="0"
                   cellpadding="0"
                   cellspacing="0"
-                  style="border: 2px solid rebeccapurple"
                 >
                   <tr>
                     <td>
@@ -498,7 +495,7 @@
                         <tr>
                           <td
                             width="70%"
-                            style="border: 2px solid lightblue; padding: 1rem"
+                            style="padding: 1rem"
                             align="left"
                             class="footer-left-cell"
                           >
@@ -518,11 +515,7 @@
                           <td
                             width="30%"
                             class="footer-right-cell"
-                            style="
-                              border: 2px solid red;
-                              text-align: center;
-                              padding: 1rem;
-                            "
+                            style="text-align: center; padding: 1rem"
                           >
                             <a href="#" style="padding: 0 12px">
                               <img
