testing sign in button styles

--- a/index.html
+++ b/index.html
@@ -221,11 +221,11 @@
                       <p>
                         Sign in to manage your billing and payment information
                       </p>
-                      <button
+                      <a
                         style="
                           display: block;
                           width: 40%;
-
+                          text-align: center;
                           margin: 1rem 0;
                           padding: 0.25rem 0.5rem;
                           background-color: var(--att-blue);
@@ -237,7 +237,7 @@
                         "
                       >
                         Sign In
-                      </button>
+                      </a>
                     </td>
                   </tr>
                   <!-- thank you row -->
