build adjustments @ images and links row

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     <td style="padding-top: 1rem">
                       <p>
                         If your service is suspended, billing will continue for
-                        your monthly charges and you will be charger a fee to
+                        your monthly charges and you will be charged a fee to
                         restore each AT&T service.
                       </p>
                     </td>
@@ -222,6 +222,8 @@
                         Sign in to manage your billing and payment information
                       </p>
                       <a
+                        href="#"
+                        target="_blank"
                         style="
                           display: block;
                           width: 40%;
@@ -234,6 +236,7 @@
                           border: none;
                           border-radius: 5px;
                           cursor: pointer;
+                          text-decoration: none;
                         "
                       >
                         Sign In
@@ -351,24 +354,28 @@
                             >
                               <tr>
                                 <td style="text-align: center" valign="top">
-                                  <a href="#" target="_blank">
+                                  <a
+                                    href="#"
+                                    target="_blank"
+                                    style="
+                                      text-decoration: none;
+                                      color: var(--att-blue);
+                                    "
+                                  >
                                     <img
                                       src="https://i.postimg.cc/PfZxRH3Q/paperless.png"
                                       alt="#"
                                       width="125px"
                                       style="width: 100%; max-width: 125px"
                                     />
-                                    <a
-                                      href="#"
-                                      target="_blank"
-                                      style="
-                                        display: block;
-                                        color: var(--att-blue);
-                                        text-decoration: none;
-                                      "
-                                      >Go Paperless
-                                    </a>
-                                    <p>Reduce clutter with online billing</p>
+                                    <p style="color: #333333">
+                                      <span style="color: var(--att-blue)"
+                                        >Go paperless</span
+                                      >
+                                      <br />
+                                      Reduce clutter with online billing
+                                    </p>
+                                    <!-- <p>Reduce clutter with online billing</p> -->
                                   </a>
                                 </td>
                               </tr>
@@ -390,26 +397,28 @@
                             >
                               <tr>
                                 <td style="text-align: center" valign="top">
-                                  <a href="#" target="_blank">
+                                  <a
+                                    href="#"
+                                    target="_blank"
+                                    style="
+                                      text-decoration: none;
+                                      color: var(--att-blue);
+                                    "
+                                  >
                                     <img
                                       src="https://i.postimg.cc/rs6pwZm4/autopay.png"
                                       alt="#"
                                       width="125px"
                                       style="width: 100%; max-width: 125px"
                                     />
-                                    <a
-                                      href="#"
-                                      target="_blank"
-                                      style="
-                                        display: block;
-                                        color: var(--att-blue);
-                                        text-decoration: none;
-                                      "
-                                      >Set up AutoPay
-                                    </a>
-                                    <p>
-                                      Save time and pay your bill automatically!
+                                    <p style="color: #333333">
+                                      <span style="color: var(--att-blue)"
+                                        >Set up Autopay</span
+                                      >
+                                      <br />
+                                      Save time and pay your bill automatically
                                     </p>
+                                    <!-- <p>Reduce clutter with online billing</p> -->
                                   </a>
                                 </td>
                               </tr>
@@ -430,27 +439,29 @@
                             >
                               <tr>
                                 <td style="text-align: center" valign="top">
-                                  <a href="#" target="_blank">
+                                  <a
+                                    href="#"
+                                    target="_blank"
+                                    style="
+                                      text-decoration: none;
+                                      color: var(--att-blue);
+                                    "
+                                  >
                                     <img
                                       src="https://i.postimg.cc/50Q01Wx1/understand-bill.png"
                                       alt="#"
                                       width="125px"
-                                      style="max-width: 125px"
+                                      style="width: 100%; max-width: 125px"
                                     />
-                                    <a
-                                      href="#"
-                                      target="_blank"
-                                      style="
-                                        display: block;
-                                        color: var(--att-blue);
-                                        text-decoration: none;
-                                      "
-                                      >Understand your bill
-                                    </a>
-                                    <p>
+                                    <p style="color: #333333">
+                                      <span style="color: var(--att-blue)"
+                                        >Understand your bill</span
+                                      >
+                                      <br />
                                       Get info about your bill and payment
-                                      options
+                                      options.
                                     </p>
+                                    <!-- <p>Reduce clutter with online billing</p> -->
                                   </a>
                                 </td>
                               </tr>
