center aligned content images and links row using inline css

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 
             <!--images and links row -->
             <tr>
-              <td style="padding: 15px">
+              <td style="padding: 15px; text-align: center">
                 <!-- this table takes data cell 100% width -->
                 <table
                   width="100%"
